Fixed AniLink, and few other z-indexs

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -327,6 +327,16 @@ h1 {
     display: inline-block;
     cursor: pointer;
     transition: all 100ms ease;
+    position: relative;
+
+    &::before {
+      content: '';
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+  }
 
     &:hover {
       color: white;
