--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -456,7 +456,7 @@ section#testimonials {
       display: flex;
       align-items: center;
       pointer-events: none;
-      transform: translateZ(20px);
+      transform: translateZ(21px);
       transition: opacity 300ms ease;
 
       .active & {
